--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "bulma": "^0.7.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "node-sass": "^4.9.0",
     "popper": "^1.0.1",
+    "sass-loader": "^7.0.3",
     "vue": "^2.4.2",
     "vue-i18n": "^7.2.0",
     "vue-router": "^2.7.0",
