Adds past games

--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "axios": "^0.16.2",
     "bootstrap": "4.0.0-beta",
     "bulma": "^0.7.1",
+    "bulma-extensions": "^2.2.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.11.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
+    "npm": "^6.1.0",
     "popper": "^1.0.1",
     "sass-loader": "^7.0.3",
     "vue": "^2.4.2",
