--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bell": "^10.0.0",
     "hapi": "^18.1.0",
     "pg": "^7.9.0"
   }
