--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/basic": "^5.1.0",
-    "@hapi/cookie": "^10.1.0",
     "bcrypt": "^3.0.6",
     "hapi": "^18.1.0",
+    "hapi-auth-jwt2": "^4.0.0",
     "pg": "^7.9.0"
   }
 }
