--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,28 +4,25 @@
   "description": "Disc scores application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export $(cat .env) && npx parcel index.html --port 3000"
+    "start": "export $(cat .env) && npx parcel index.html --no-autoinstall --port 3000"
   },
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "vue": "^2.6.6",
-    "vue-hot-reload-api": "^2.3.2",
+    "vue-hot-reload-api": "^2.3.3",
     "vue-i18n": "^8.8.1",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.5.2",
+    "@vue/component-compiler-utils": "^3.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.13.0",
-    "eslint-plugin-vue": "^5.2.1",
-    "parcel-bundler": "^1.11.0",
-    "parcel-plugin-eslint": "^1.0.6",
-    "sass": "^1.17.0",
-    "vue-template-compiler": "^2.6.6"
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.20.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
