Renamed Track to course. Course add and Course delete works

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 export PGHOST=172.17.0.2
 export PGUSER=postgres
 export PGPASSWORD=lorem
-export PGDATABASE=discscoresdb
+export PGDATABASE=dsdb
 export PGPORT=5432
 export SECRET_KEY=lol
