--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres
-ENV POSTGRES_DB discscoresdb
+ENV POSTGRES_DB dsdb
 ENV POSTGRES_PASSWORD lorem
 COPY schema.sql /docker-entrypoint-initdb.d/
