--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.6",
     "vue-hot-reload-api": "^2.3.3",
     "vue-i18n": "^8.8.1",
