--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "Disc scores application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export $(cat .env) && parcel ./src/index.html --port 3000"
+    "start": "export $(cat .env) && parcel ./src/index.html --port 3000",
+    "build": "export $(cat .env.production) && parcel build ./src/index.html"
   },
   "license": "ISC",
   "dependencies": {
