--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,19 @@
   "description": "Disc scores application",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export $(cat .env) && parcel ./src/index.html --port 3000",
+    "start": "export $(cat .env) && parcel ./src/index.html --port 3000 --hmr-port 45253",
     "build": "export $(cat .env.production) && parcel build ./src/index.html"
   },
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "bulma": "^0.7.4",
+    "axios": "^0.18.1",
+    "bulma": "^0.7.5",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.6",
     "vue-hot-reload-api": "^2.3.3",
     "vue-i18n": "^8.8.1",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0",
+    "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.12.3",
-    "sass": "^1.20.1",
+    "sass": "^1.20.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
