--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "export $(cat .env) && node index.js"
+    "start": "export $(cat .env) && node index.js",
+    "dev": "ts-node-dev --respawn --transpileOnly ./index.ts",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^7.4.2",
     "@hapi/hapi": "^18.3.1",
+    "@types/google-protobuf": "^3.7.0",
     "bcrypt": "^3.0.6",
+    "google-protobuf": "^3.8.0",
+    "grpc": "^1.21.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "protobufjs": "^6.8.8",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "typescript": "^3.5.2"
   }
 }
